fixed spacing issues with api messages

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -55,7 +55,7 @@ body {
   margin:-2px;
   padding-left: 15px;
   padding-right: 15px;
-  padding-top: 25px;
+  padding-top: 35px;
   width: 200px;
   text-align: center;
  }
@@ -100,7 +100,7 @@ body {
 }
 
 .api-info {
-  z-index: 9100;
-  color: blue;
-  background-color: white;
+  margin-left: 20px;
+  font-size: 12px;
+  margin-top: -15px;
 }
